- Corrected typoes in INSTALL - Fixed issues running on python2.3 (ie RHEL4) - All tests are now single threaded except for performance, which now uses   the threading module instead of fork. - Fixed dependency issue in spec.  >= python 2.3 is now required.

--- a/amqp_hooks/INSTALL
+++ b/amqp_hooks/INSTALL
@@ -1,8 +1,8 @@
 To build the installation packages, run:
 make
 
-This should create RPMs in RPMS/<arch> called low-latency, condor-job-hooks,
-and condor-job-hooks-common.   Install these RPMs.
+This should create RPMs in RPMS/<arch> called condor-low-latency,
+condor-job-hooks, and condor-job-hooks-common.   Install these RPMs.
 
 Condor (>= 7.0.2-4) will need to be configured in order to use these job
 hooks (ie the low-latency feature).  To configure condor, add the following
