--- a/amqp_hooks/INSTALL
+++ b/amqp_hooks/INSTALL
@@ -28,12 +28,12 @@ For more information on Condor/Grid hooks please see:
 https://www.cs.wisc.edu/condor/manual/v7.1/4_4Job_Hooks.html
 
 The AMQP translation daemon (carod) is configured by editing the config file
-/etc/opt/grid/carod.conf.  This file controls which AMQP broker
+/etc/condor/carod.conf.  This file controls which AMQP broker
 to talk to and all relevant options (exchange name, queue, ip, etc), as well 
 as the configuration information for caro itself.
 
 The Condor job hooks are configured by editing the config file
-/etc/opt/grid/job-hooks.conf.  This file tells the job hooks on what port
+/etc/condor/job-hooks.conf.  This file tells the job hooks on what port
 and IP the translation daemon can be contact.  The ip and port information
 in this file must match what carod is configured with.
 
@@ -42,5 +42,5 @@ The carod daemon can be started and stopped via the init file:
 
 To use the low-latency feature, configure condor as mention aboved, ensure
 qpid is running, and start carod.  To submit jobs, send AMQP messages to the
-AMQP queue defined in the /etc/opt/grid/carod.conf configuration file, with
+AMQP queue defined in the /etc/condor/carod.conf configuration file, with
 the classad information stored as headers in the application_headers field.
