--- a/amqp_hooks/INSTALL
+++ b/amqp_hooks/INSTALL
@@ -1,12 +1,6 @@
-To build the installation packages, run:
-make
-
-This should create RPMs in RPMS/<arch> called condor-low-latency,
-condor-job-hooks, and condor-job-hooks-common.   Install these RPMs.
-
 Condor (>= 7.0.2-4) will need to be configured in order to use these job
 hooks (ie the low-latency feature).  To configure condor, add the following
-lines to your condor_config (default /etc/condor/) file:
+lines to your condor_config (default location: /etc/condor) file:
 
 # Startd hooks
 LOW_LATENCY_HOOK_FETCH_WORK = $(LIBEXEC)/hooks/hook_fetch_work.py
@@ -23,6 +17,9 @@ STARTER_JOB_HOOK_KEYWORD = LOW_LATENCY
 
 FetchWorkDelay = ifThenElse(State == "Claimed" && Activity == "Idle", 0, 10)
 STARTER_UPDATE_INTERVAL = 30
+
+LL_DAEMON = $(SBIN)/carod
+DAEMON_LIST = $(DAEMON_LIST), LL_DAEMON
 
 For more information on Condor/Grid hooks please see:
 https://www.cs.wisc.edu/condor/manual/v7.1/4_4Job_Hooks.html
@@ -58,7 +55,8 @@ LL_DAEMON_QUEUED_CONNECTIONS:
 LL_DAEMON_LEASE_TIME:
    Type: Integer
    Desc: The maximum amount of time a job is allowed to run without providing
-         an update
+         an update.  This  must be larger than what is set for
+         STARTER_UPDATE_INTERVAL.
 
 LL_DAEMON_LEASE_CHECK_INTERVAL:
    Type: Integer
@@ -67,27 +65,10 @@ LL_DAEMON_LEASE_CHECK_INTERVAL:
 If the configuration is not found in condor's configuration files, then
 carod will look in /etc/condor/carod.conf.
 
-The Condor job hooks will first look for their configuration in condor's
-configuration files.  The following parameters can be placed in a condor
-configuration file to configure the job hooks:
+Then edit the job hook configuration file to communicate with carod.
+See /usr/share/doc/condor-job-hooks-1.0/INSTALL for details.
 
-LL_HOOKS_IP:
-   Type: IP Address
-   Desc: The IP address where carod is listening for connections
-
-LL_HOOKS_PORT:
-   Type: Integer
-   Desc: The port carod is listening for connections
-
-
-If the configuration is not found in condor's configuration files, then
-the job hooks will look in /etc/condor/job-hooks.conf.  The ip and port
-information for the job hooks must match how carod is configured.
-
-The carod daemon is started and stopped by Condor's master daemon.
-Example parameters to add to condor's configuration files can be found at:
-
-/usr/share/doc/condor-low-latency-1.0/ll_condor_config
+Once the configuration is complete, restart condor.
 
 To use the low-latency feature, configure condor as mention aboved, ensure
 qpid is running, and start carod.  To submit jobs, send AMQP messages to the
